# project-one

./: .gitignore  BOOTSTRAP-COMPLETE.md  BOOTSTRAP-REPORT.md  BOOTSTRAP.md  DEPLOYMENT-STATUS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  LUNA-DEPLOYMENT-VERIFIED.md  QUICKREF.md  README.md  STRUCTURE.txt  VERIFICATION.md  bootstrap-engineer.py  luna-project.json  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md  engineer.md
config/: cron-jobs.sh  spawn-engineer.sh
docs/: ARCHITECTURE.md  PRD.md  SETUP.md  TRD.md
docs/adr/: ADR-000-template.md  ADR-001-agent-driven-development.md
src/project_one/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_sample.py
